Fix regression: Default namespace not correctly used

https://bugzilla.gnome.org/show_bug.cgi?id=684564